# Jungle-Chess-Python

./: .gitignore  AI Challenge.py  AI Claude v1.py  AI Claude.py  AI Gemini.py  AI Max v1.py  AI Max.py  AI.py  AI_Series_Depth_Averages.txt  AI_Series_Results.txt  AIv121.py  Challenge.txt  Game 01.txt  GameLogic.py  JungleChess.py  JungleChessUI.py  OpponentAI.py  PieceTuner.py  TablebaseGenerator.py  TablebaseManager.py  TablebaseViewer.py  Tests.py  Zreadme.txt  benchmark.py  benchmarks.tsv  book_generator.py  old_longest_mates.tsv  opening_book.json  pyproject.toml  readme.txt  tablebase_equivalence_checker.py  tablebase_equivalence_report.json  tb fens.txt  tuner_positions.json  tuner_positions.json.partial  tuner_results.json
Benchmarks & Tests/: Tests.py  benchmark.py  benchmark2.py  benchmarks.tsv
Piece Val Tuning/: PieceTuner.py  tuner_500_d4.json  tuner_positions.json  tuner_positions.json.partial  tuner_positions_1k_d6.json  tuner_results.json
TBs/: K_Knight_vs_Queen_K_tb16.bin.wdl  longest_mates_tb16.tsv
benchmark_reports/: bench_20260308_000246_v95.5.json  bench_20260308_000801_v96.json  bench_20260308_001457_v96(2).json  bench_20260308_003608_v96.1.json  bench_20260308_005642_v96.2.json  bench_20260308_013025_v96.3.json  bench_20260308_014609_96.4.json  bench_20260308_020220_97.json  bench_20260308_133617_v98.2.json  bench_20260308_145019_v98.21.json  bench_20260308_153334_v98.3.json  bench_20260309_000143_98.4.json  bench_20260309_215242_98.7.json  bench_20260309_220027_98.8 real.json  bench_20260311_193630_99.json  bench_20260311_195036_v100.json  (+11 more)
(+22 files in other folders)
