[project]
name = "jungle-chess"
version = "1.0.0"
description = "Jungle Chess game implementation with AI opponent and tablebase support"
readme = "Zreadme.txt"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
